--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "version": "0.0.7-3",
   "repository": {
     "type": "git",
-    "url": "git://github.com/kesavkolla/compound-passport.git"
+    "url": "git@github.com:co-/-passport.git"
   },
   "main": "lib/passport.js",
   "engines": {
